# VDB-Deformer

./: .gitignore  CMakeLists (copy).txt  CMakeLists.txt  README.md  package.py  test.sh
src/: vdb_activate_from_points.C  vdb_activate_from_points.h  vdb_deformer.C  vdb_deformer.h
test/: test.hip  test.hipnc  test.sh  test_problem.hipnc
test/backup/: test_bak1.hip  test_bak2.hip  test_bak3.hip
vdb_deformer/: vdb_deformer.pro
